--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="Layout.css" type="text/css"/>
     <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
+    <div id="image1">
+        
+        <p>Consider using a &lt;div&gt; tag of the identical size of the image
+         (do not use an image tag) </p>
+
+    </div>
+
+
+    <p > </p>
+    <p> </p>
+    <p> </p>
 
 </body>
 </html>
